--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "build": "babel ./src --out-dir dist",
     "prod": "SET NODE_ENV=production npm-run-all clean build server:prod",
     "watch": "nodemon",
-    "test": "jest"
+    "test": "jest",
+    "test:coverage": "jest --coverage"
   },
   "dependencies": {
     "@hapi/joi": "^15.0.2",
