--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build": "babel ./src --out-dir dist",
     "prod": "SET NODE_ENV=production npm-run-all clean build server:prod",
     "watch": "nodemon",
-    "test": "jest",
+    "test": "SET NODE_ENV=test&& jest --verbose",
     "test:coverage": "jest --coverage"
   },
   "dependencies": {
@@ -35,14 +35,18 @@
     "@babel/cli": "^7.4.4",
     "@babel/core": "^7.4.4",
     "@babel/node": "^7.2.2",
+    "@babel/plugin-transform-runtime": "^7.4.4",
     "@babel/polyfill": "^7.4.4",
     "@babel/preset-env": "^7.4.4",
     "@babel/preset-stage-2": "^7.0.0",
     "@babel/register": "^7.4.4",
+    "@babel/runtime": "^7.4.4",
     "babel-jest": "^24.7.1",
     "babel-preset-jest": "^24.6.0",
     "jest": "^24.7.1",
-    "nodemon": "^1.19.0"
+    "nodemon": "^1.19.0",
+    "regenerator-runtime": "^0.13.2",
+    "supertest": "^4.0.2"
   },
   "jest": {
     "verbose": true,
