--- a/package.json
+++ b/package.json
@@ -12,20 +12,11 @@
   },
   "dependencies": {
     "@hapi/joi": "^15.0.2",
-    "bcrypt": "^3.0.0",
     "config": "^3.0.1",
-    "cookie-parser": "~1.4.3",
-    "cors": "^2.8.5",
-    "debug": "~2.6.9",
     "express": "~4.16.0",
-    "jsonwebtoken": "^8.5.1",
-    "lodash": "^4.17.11",
-    "mongoose": "^5.0.1",
     "morgan": "~1.9.0",
     "mysql": "^2.17.1",
-    "mysql2": "^1.6.5",
-    "npm-run-all": "^4.1.5",
-    "rimraf": "^2.6.3"
+    "npm-run-all": "^4.1.5"
   },
   "devDependencies": {
     "@babel/cli": "^7.4.4",
