--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "SET NODE_ENV=development&& npm-run-all server",
     "watch": "nodemon",
     "test": "SET NODE_ENV=test&& jest --verbose",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "SET NODE_ENV=test&& jest --coverage"
   },
   "dependencies": {
     "@hapi/joi": "^15.0.2",
